--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,25 +1,31 @@
-name: Java Apps - Run Tests and Package 
+name: Java Apps - Run Tests and Package
 on:
   push:
-    branches: ["main"] 
+    branches: ["main"]
   workflow_dispatch:
-lobs: 
+
+jobs:
   test_and_build:
-    name: Test and build samples 
-      runs-on: ubuntu-latest 
-      steps:
+    name: Test and build samples
+    runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v3
-      - name: set up DK
-        uses: actions/setup-java@v3 
+      - name: Set up Java
+        uses: actions/setup-java@v3
         with:
-        java-version: '11' distribution: 'temurin'
-      - name: run tests
-        run: mvn clean test tee test.log
-      - name: build artifacts
+          java-version: '11'
+          distribution: 'temurin'
+
+      - name: Run tests
+        run: mvn clean test | tee test.log
+
+      - name: Build artifacts
         run: mvn clean package -Dmaven.test.skip
-      - name: set up artifacts
-        run: mkdir artifacts && cp test.log target/* jar artifacts
-      - uses: actions/upload-artifact@v3 
+
+      - name: Set up artifacts
+        run: mkdir artifacts && cp test.log target/*.jar artifacts
+
+      - uses: actions/upload-artifact@v3
         with:
-          name: Package 
+          name: Package
           path: artifacts
